# roseyTheVoice

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml
scripts/: download_models.sh  xtts_server.py
src/: main.cpp
src/audio/: AudioEngine.cpp  AudioPipeline.cpp  RingBuffer.cpp  VADProcessor.cpp
src/ipc/: SharedMemoryIPC.cpp
src/llm/: ActionDetector.cpp  ConversationEngine.cpp  EmbeddingEngine.cpp  LLMClient.cpp
src/orchestrator/: Orchestrator.cpp
src/stt/: STTEngine.cpp
src/tts/: TTSEngine.cpp  TTSStreamer.cpp
src/wakeword/: WakeWordDetector.cpp
tests/audio/: test_aec3_pipeline.cpp  test_audio.cpp  test_ring_buffer.cpp
tests/integration/: test_e2e.cpp  test_live_transcription.cpp
tests/llm/: test_llm.cpp
tests/orchestrator/: test_orchestrator.cpp
tests/stt/: test_stt.cpp
tests/tts/: test_tts.cpp
